publications tab plus hosting info

--- a/index.html
+++ b/index.html
@@ -32,9 +32,18 @@
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center> 
+           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><i>This site is
+           hosted using <b>Github Pages</b>.</i>
      </div>
 
+
+      <!-- "Publications" tab -->
+     <div id="Publications" class="tabcontent">
+     	<h3>Publications</h3>
+     	<p>Archival publications:<br>
+        (Pending publication)<br> <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. <i>Evaluation
+        of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+     </div>
 
 
       <!-- "Contact" tab -->
