add publications button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="text">
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'About')" id="defaultOpen">About</button>
+    <button class="tablinks" onclick="openCity(event, 'Contact')">Publications</button>
     <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
       <button class="tablinks" onclick="openCity(event, 'Travel')">Travel</button>
       </div>
@@ -28,11 +29,11 @@
 		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
                     Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
                     Architecture Lab.<br><br></p>
-		    <br><br><br><br><br><br><br><br><br><br>
+		    <br><br><br><br><br><br><br><br><br>
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><i>This site is
+           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><i>This site is
            hosted using <b>Github Pages</b>.</i>
      </div>
 
