fix bug in publications tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="text">
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'About')" id="defaultOpen">About</button>
-    <button class="tablinks" onclick="openCity(event, 'Contact')">Publications</button>
+    <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
     <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
       <button class="tablinks" onclick="openCity(event, 'Travel')">Travel</button>
       </div>
