--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 		    <font size="10"><b>Hi.</b></font><br> 
 		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
                     Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
-                    Architecture Lab.<br><br></p>
+                    Architecture Lab.<br><br>
+            You can view my personal GitHub account by clicking the mark in "Useful links" below. It
+            contains the source of this website, some of my personal configuration files for linux,
+            as well as development of auto-graders for a course I'm TAing this semester: EE200
+            Machine-centric Approach Programming.</p>
 		    <br><br><br><br><br><br><br><br><br>
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
