fix bug in tab content

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <div id="wrap">
 <div class="text">
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'About')" id="defaultOpen">About</button>
-    <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
-    <button class="tablinks" onclick="openCity(event, 'Contact')">Contact</button>
-      <button class="tablinks" onclick="openCity(event, 'Travel')">Travel</button>
+  <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
+    <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
+    <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
+      <button class="tablinks" onclick="openTab(event, 'Travel')">Travel</button>
       </div>
 
       
