--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
 		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
                     Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
                     Architecture Lab.<br><br>
-            You can view my personal GitHub account by clicking the mark in "Useful links" below. It
-            contains the source of this website, some of my personal configuration files for linux,
-            as well as development of auto-graders for a course I'm TAing this semester: EE200
+            You can view my personal GitHub page by clicking the GitHub mark in "Useful links" bar
+            down below. Publicly, it
+            contains the source code for this website, some of my personal configuration files for linux,
+            as well as auto-grader development for grading in a course I'm TAing this semester: EE200
             Machine-centric Approach Programming.</p>
-		    <br><br><br><br><br><br><br><br><br>
+		    <br><br><br><br><br><br>
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><i>This site is
-           hosted using <b>Github Pages</b>.</i>
+           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><font size="3"><i>This site is
+           hosted using <b>Github Pages</b>.</i></font>
      </div>
 
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Publications</h3>
-     	<p>Archival publications:<br>
-        (Pending publication)<br> <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. <i>Evaluation
-        of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+     	<p>Archival publications:</p><br><br>
+        <p align="right">(Pending publication)<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
+        <i>Evaluation of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
      </div>
 
 
