--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h3>About</h3>
  	    <img src="images/alex_brooklyn.png" width='320' height='240' align="left">
                     <p class="ex1">
-		    <font size="10"><b>Hi.</b></font><br> 
+		    <font size="10"><b>Welcome.</b></font><br> 
 		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
                     Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
                     Architecture Lab.<br><br>
@@ -38,7 +38,7 @@
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><font size="3"><i>This site is
+           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><font size="2.5"><i>This site is
            hosted using <b>Github Pages</b>.</i></font>
      </div>
 
@@ -46,9 +46,9 @@
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Publications</h3>
-     	<p>Archival publications:</p><br><br>
+     	<p>Archival publications:</p><br>
         <p align="right">(Pending publication)<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
-        <i>Evaluation of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+        <i>Evaluation <br>of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
      </div>
 
 
@@ -80,7 +80,7 @@
        		<div class="column">  		
        		<img src="images/SiemReap.jpg" height="190" width="250"></td></tr>
        	</div></div></center> 
-       	<p align='center'><font size='1'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
+       	<p align='center'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
         Thom</font></p>
 
        </div>
