--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
                     Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
                     Architecture Lab.<br><br>
-            You can view my personal GitHub page by clicking the GitHub mark in "Useful links" bar
+            You can view my personal GitHub page by clicking the GitHub mark in the "Useful links" bar
             down below. Publicly, it
             contains the source code for this website, some of my personal configuration files for linux,
             as well as auto-grader development for grading in a course I'm TAing this semester: EE200
