manicuring cont'd again

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><br><font size="2.5"><i>This site is
+           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><font size="2.5"><i>This site is
            hosted using <b>Github Pages</b>.</i></font>
      </div>
 
@@ -46,9 +46,9 @@
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Publications</h3>
-     	<p>Archival publications:</p><br>
-        <p align="right">(Pending publication)<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
-        <i>Evaluation <br>of Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+     	<p><i>Archival publications:</i></p><br>
+        <p align="center">(Pending publication)<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
+        <i>Evaluation of<br> Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
      </div>
 
 
