remove hosting info

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
             Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
             Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center><br><br><font size="2.5"><i>This site is
-           hosted using <b>Github Pages</b>.</i></font>
+           <img src="images/GitHub-Mark-32px.png"></a></center>
      </div>
 
 
@@ -63,7 +62,6 @@
        	Office:&nbsp;105 Halligan Hall<br>
        	<a href="mailto:alexander.hankin@tufts.edu">alexander.hankin@tufts.edu</a> </p> 
      </div>
-
 
        
       <!-- "Travel" tab -->
