--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
      <div id="Publications" class="tabcontent">
      	<h3>Publications</h3>
      	<p><i>Archival publications:</i></p><br>
-        <p align="center">(Pending publication)<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
-        <i>Evaluation of<br> Emerging NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+        <p align="center">(Pending publication)&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
+        <i>Evaluation of Emerging<br> NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
      </div>
 
 
@@ -79,7 +79,7 @@
        		<img src="images/SiemReap.jpg" height="190" width="250"></td></tr>
        	</div></div></center> 
        	<p align='center'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
-        Thom</font></p>
+        Thom.</font></p>
 
        </div>
 </div>
