--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-     	<h3>Publications</h3>
-     	<p><i>Archival publications:</i></p><br>
-        <p align="center">(Pending publication)&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, M. Hempstead. 
-        <i>Evaluation of Emerging<br> NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+     	<h3>Publications</h3><br>
+     	<p><i>Archival publications:</i></p>
+        <p align="center">(Pending publication)&nbsp;&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
+        M. Hempstead. 
+        <i>Evaluation of Emerging<br> &nbsp;&nbsp;NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
      </div>
 
 
