--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-     	<h3>Publications</h3><br>
+     	<h3>Publications</h3>
      	<p><i>Archival publications:</i></p>
         <p align="center">(Pending publication)&nbsp;&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
