--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
-             <p>Here are some pictures from a recent backpacking trip (June-July 2018):</p><br><br>
+             <p>Here are some pictures from a recent backpacking trip in Asia (June-July 2018):</p><br><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
