--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
-             <p>Here are some pictures from a recent backpacking trip in Asia (June-July 2018):</p><br><br>
+             <p>Here are some pictures from a recent backpacking trip in Asia (June-July 2018):</p><br>
+       	<p align='center'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
+        Thom.</font></p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
@@ -79,8 +81,6 @@
        		<div class="column">  		
        		<img src="images/SiemReap.jpg" height="190" width="250"></td></tr>
        	</div></div></center> 
-       	<p align='center'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
-        Thom.</font></p>
 
        </div>
 </div>
