--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
              <p>Here are some pictures from a recent backpacking trip in Asia (June-July 2018):</p>
-       	<p align='center'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
+       	<p align='left'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
         Thom.</font></p><br>
               <center> <div class="row">
        		<div class="column">
