--- a/index.html
+++ b/index.html
@@ -15,24 +15,15 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
           <h3>About</h3>
- 	    <img src="images/alex_brooklyn.png" width='320' height='240' align="left">
+ 	    <img src="images/Alex_edit_crop.png" align="left">
                     <p class="ex1">
 		    <font size="10"><b>Welcome.</b></font><br> 
-		    I am a 2nd-year PhD student in the Electrical and Computer Engineering Department at
-                    Tufts University under the advisement of Dr. Mark Hempstead. I do research in the Tufts Computer
-                    Architecture Lab.<br><br>
-            You can view my personal GitHub page by clicking the GitHub mark in the "Useful links" bar
-            down below. Publicly, it
-            contains the source code for this website, some of my personal configuration files for linux,
-            as well as auto-grader development for grading in a course I'm TAing this semester: EE200
-            Machine-centric Approach Programming.</p>
-		    <br><br><br>
-		    <center>Useful links: <a href="https://engineering.tufts.edu/ece/">Tufts Electrical and
-            Computer Engineering Department</a> | <a href="https://sites.tufts.edu/tcal/">Tufts
-            Computer Architecture Lab</a> | <a href="https://github.com/ah7149407">
-           <img src="images/GitHub-Mark-32px.png"></a></center>
+		    I am a 2nd-year PhD student in the <a
+            href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
+            Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
+            research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
+            Lab.</a><br><br></p>
      </div>
-
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
