--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
           <h3>About</h3>
- 	    <img src="images/Alex_edit_crop.png" align="left">
+ 	    <img src="images/Alex_edit_crop.png" width='337' height='288' align="left">
                     <p class="ex1">
 		    <font size="10"><b>Welcome.</b></font><br> 
 		    I am a 2nd-year PhD student in the <a
