--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-     	<h3>Publications</h3>
-     	<p><i>Archival publications:</i></p>
+     	<h3>Archival Publications</h3>
         <p align="center">(Pending publication)&nbsp;&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
@@ -51,9 +50,8 @@ layout: default
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
-             <p>Here are some pictures from a recent backpacking trip in Asia (June-July 2018):</p>
-       	<p align='left'><font size='2'>(From left to right:) Ho Chi Minh City, Shanghai, Angkor
-        Thom.</font></p><br>
+             <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
+             left to right: Saigon, Shanghai, Angkor Thom (Cambodia):</p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
