--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
              <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
-             left to right: Saigon, Shanghai, Angkor Thom (Cambodia):</p><br>
+             left to right:<br> Saigon, Shanghai, Angkor Thom (Cambodia):</p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
