--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-     	<h3>Archival Publications</h3>
-        <p align="center">(Pending publication)&nbsp;&nbsp;<b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
+     	<h3>Archival Publications</h3><br>
+        <p align="center"><b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Emerging<br> &nbsp;&nbsp;NVMs in LLC Given Workload Behavior</i>. ISPASS 2019.</p>	
+        <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
+        Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</p>	
      </div>
 
 
