--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3><br>
-        <p align="center"><b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
+        <b>2019</b><br>
+        <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
         Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</p>	
@@ -52,7 +53,7 @@ layout: default
        <div id="Travel" class="tabcontent">
            <h3>Travel</h3>
              <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
-             left to right:<br> Saigon, Shanghai, Angkor Thom (Cambodia):</p><br>
+             left to right:<br> Saigon, Shanghai, Angkor Thom (Cambodia).</p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
