--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3><br>
-        <b>2019</b><br>
+        <center><b>2019</b></center><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
+        <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
         Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</p>	
      </div>
 
