--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3><br>
-        <center><b>2019</b></center><br>
+        <p><center><b>2019</b><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
-        Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</p>	
+        Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</center></p>	
      </div>
 
 
