--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
              <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
-             left to right:<br> Saigon, Shanghai, Angkor Thom (Cambodia).</p><br>
+             left to right:<br> Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
