--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@ layout: default
  	    <br><br>
         <img src="images/Alex_edit_crop_scaled.png" width='337' height='288' align="left">
                     <p class="ex1">
-		    <font size="10" align='right'><b>Welcome.</b></font><br><br> 
+		    <font size="8" align='right'><b>Welcome!</b></font><br><br> 
 		    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
             research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab.</a><br><br></p>
+            Lab.</a> I passed my qualification exam in Spring 2018 and am interested in emerging
+	    memories for caches. <br><br>
+
+	    I am currently an intern at Google working on a domain-specific architecture for image processing
+	    on the mobile platform.</p>
      </div>
 
       <!-- "Publications" tab -->
