--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 	    memories for caches. <br><br>
 
 	    I am currently an intern at Google working on a domain-specific architecture for image processing
-	    on the mobile platform.</p>
+	    on the mobile platform.<br><br><br><br><br><br><br><br><br><br><br><br></p>
      </div>
 
       <!-- "Publications" tab -->
