add profile links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@ layout: default
 	    memories for caches. <br><br>
 
 	    I am currently an intern at Google working on a domain-specific architecture for image processing
-	    on the mobile platform.<br><br><br><br><br><br><br><br><br><br><br><br></p>
+	    on the mobile platform.<br><br>
+
+	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
+	            <a href="www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
+		    <br><br><br><br><br><br><br></p>
      </div>
 
       <!-- "Publications" tab -->
