fix linkedin link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 	    on the mobile platform.<br><br>
 
 	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
-	            <a href="www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
+	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
 		    <br><br><br><br><br><br><br></p>
      </div>
 
