--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
  	    <br><br>
         <img src="images/Alex_edit_crop_scaled.png" width='337' height='288' align="left">
                     <p class="ex1">
-		    <font size="8" align='right'>welcome</font><br><br> 
+                    <p align="right"><font size="8">welcome</font></p><br><br> 
 		    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
