--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
  	    <br><br>
-        <img src="images/Alex_edit_crop_scaled.png" width='337' height='288' align="left">
+        <img src="images/just_me_cambodia.png" align="left">
                     <p class="ex1">
                     <font size="8">welcome</font><br><br> 
 		    I am a 2nd-year PhD student in the <a
