--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@ layout: default
     <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
     <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
       <button class="tablinks" onclick="openTab(event, 'Travel')">Travel</button>
+      <button class="tablinks" onclick="openTab(event, 'Art Work')">Art Work</button>
       </div>
 
       
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
  	    <br><br>
-        <img src="images/just_me_cambodia.png" width='220' height='370' align="left">
+        <img src="images/just_me_cambodia.png" width='264' height='444' align="left">
                     <p class="ex1">
                     <font size="8">welcome</font><br><br> 
 		    I am a 2nd-year PhD student in the <a
@@ -60,6 +61,22 @@ layout: default
        <div id="Travel" class="tabcontent">
              <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
              left to right:<br> Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
+              <center> <div class="row">
+       		<div class="column">
+       		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
+       	</div>
+       		<div class="column">  		
+       		<img src="images/Shanghai.jpg" height="190" width="250"></td></tr>
+       	</div>	
+       		<div class="column">  		
+       		<img src="images/SiemReap.jpg" height="190" width="250"></td></tr>
+       	</div></div></center> 
+
+       </div>
+
+      <!-- "Art Work" tab -->
+       <div id="Art Work" class="tabcontent">
+             <p>All art work by Megan Kudzma. Feel free to email me for more information. <br></p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
