--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ layout: default
 
       <!-- "Art Work" tab -->
        <div id="Art Work" class="tabcontent">
-             <p>All art work by Megan Kudzma. Feel free to email me for more information. <br></p><br>
+         <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br> 
+         Feel free to email me for more information. <br></p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
