--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
  	    <br><br>
-        <img src="images/just_me_cambodia.png" width='264' height='444' align="left" padding-right=50px>
-            <p padding-left:55px><font size="8">welcome</font><br><br> 
+        <img src="images/just_me_cambodia.png" width='264' height='444' align="left">
+            <p class="ex1"><font size="8">welcome</font><br><br> 
 		    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
