--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       <div id="About" class="tabcontent">
  	    <br><br>
         <img class="ex2" src="images/just_me_cambodia.png" width='264' height='444' align="left">
-        <center><font size="8">welcome</font></center><br><br> 
+        <font size="8" align="right">welcome</font><br><br> 
 		    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
