--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       <div id="About" class="tabcontent">
  	    <br><br>
         <img class="ex2" src="images/just_me_cambodia.png" width='264' height='444' align="left">
-        <font size="8" align="right">welcome</font><br><br> 
+        <p alight="right"><font size="8" align="right">welcome</font><br><br> 
 		    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
@@ -30,7 +30,7 @@ layout: default
 
 	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
-		    <br><br><br><br><br><br><br>
+                  <br><br><br><br><br><br><br></p>
      </div>
 
       <!-- "Publications" tab -->
