remove welcome text

--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@ layout: default
       <div id="About" class="tabcontent">
  	    <br><br>
         <img class="ex2" src="images/just_me_cambodia.png" width='264' height='444' align="left">
-        <p alight="right"><font size="8" align="right">welcome</font><br><br> 
-		    I am a 2nd-year PhD student in the <a
+	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
             research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab.</a> I passed my qualification exam in Spring 2018 and am interested in emerging
-	    memories for caches. <br><br>
+            Lab.</a> My research interests lie in the areas of Caches, Non-Volatile Memory, 
+            and Parallel Architectures. <br><br>
 
 	    I am currently an intern at Google working on a domain-specific architecture for image processing
 	    on the mobile platform.<br><br>
 
 	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
-                  <br><br><br><br><br><br><br></p>
+                  <br><br><br><br><br><br><br>
      </div>
 
       <!-- "Publications" tab -->
