--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@ layout: default
        <div id="Art Work" class="tabcontent">
          <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br> 
          Feel free to email me for more information. <br></p><br>
+              <center> <div class="row">
+       		<div class="column">
+       		<img src="images/megan_bird.jpg" height="300" width="220"></td></tr>
+       	</div>
+       		<div class="column">  		
+       		<img src="images/megan_bird2.jpg" height="190" width="250"></td></tr>
+       	</div>	
+       		<div class="column">  		
+       		<img src="images/megan_tomato.jpg" height="190" width="250"></td></tr>
+       	</div></div></center> 
 
        </div>
 </div>
