--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ layout: default
       <div id="About" class="tabcontent">
  	    <br><br>
         <img class="ex2" src="images/just_me_cambodia.png" width='330' height='338' align="left">
+	    <h3 class="c1">
+      	    Alex Hankin's Personal Site
+            </h3> 
 	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
