--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: default
             Lab.</a> My research interests lie in the areas of Caches, Non-Volatile Memory, 
             and Parallel Architectures. <br><br>
 
-	    I am currently an intern at Google working on a domain-specific architecture for image processing
-	    on the mobile platform.<br><br>
+	    I am currently a research intern at Google working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
+	    on the mobile platform.</a><br><br>
 
 	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
