--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
  	    <br><br>
-        <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
+        <img src="images/just_me_cambodia.png" width='220' height='226' align="left">
 	    <h3>
-      	    Alex Hankin's Personal Site
+      	    <center>Alex Hankin's Personal Site</center>
             </h3> 
-	    I am a 2nd-year PhD student in the <a
+	    <p class="ex1"> I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
             research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
@@ -31,7 +31,7 @@ layout: default
 	    on the mobile platform.</a><br><br>
 
 	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
-	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
+	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center></p><br><br><br>
                   <br><br><br><br><br><br><br>
      </div>
 
