--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
  	    <br><br>
-        <img src="images/just_me_cambodia.png" width='220' height='226' align="left">
+        <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
 	    <h3>
       	    <center>Alex Hankin's Personal Site</center>
             </h3> 
-	    <p class="ex1"> I am a 2nd-year PhD student in the <a
+	    <p> I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
             research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
