--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ layout: default
 	    <h3>
       	    <center>Alex Hankin's Personal Site</center>
             </h3> 
-	    <p> I am a 2nd-year PhD student in the <a
+	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
-            Department</a> at Tufts University under the advisement of Dr. Mark Hempstead. I do
-            research in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab.</a> My research interests lie in the areas of Caches, Non-Volatile Memory, 
-            and Parallel Architectures. <br><br>
+            Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
+            research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
+            Lab.</a> My research interests lie at the intersection of Non-Volatile Memory Systems, 
+            Parallel Architectures, and Thermal-Aware Computing. My dissertation is funded by Google and Intel and is centered around a thermal-aware computing system for mitigating hot spots. <br><br>
 
-	    I am currently a research intern at Google working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a></p><br><br>
+	    Currently, I am an intern at Google in Mountain View, California. I am working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
+	    on the mobile platform.</a><br><br>
 
 	    <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
