--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ layout: default
             Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
             research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
             Lab.</a> My research interests lie at the intersection of Non-Volatile Memory Systems, 
-            Parallel Architectures, and Thermal-Aware Computing. My dissertation is funded by Google and Intel and is centered around a thermal-aware computing system for mitigating hot spots. <br><br>
+            Parallel Architectures, and Thermal-Aware Computing. My dissertation research is funded by a joint Google and Intel grant. It is centered around a thermal-aware computing system for mitigating hot spots. <br><br>
 
 	    Currently, I am an intern at Google in Mountain View, California. I am working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a><br><br>
+	    on the mobile platform.</a><br><br><br>
 
 	    <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
