--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
 	    <h3>
       	    <center>Alex Hankin's Personal Site</center>
             </h3> 
+	    Hello!<br><br>
 	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
@@ -28,7 +29,7 @@ layout: default
             Parallel Architectures, and Thermal-Aware Computing. My dissertation research is funded by a joint Google and Intel grant. It is centered around a thermal-aware computing system for mitigating hot spots. <br><br>
 
 	    Currently, I am an intern at Google in Mountain View, California. I am working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a><br><br><br>
+	    on the mobile platform.</a><br><br>
 
 	    <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
