--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ layout: default
       
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
- 	    <br><br>
-        <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
 	    <h3>
       	    <center>Alex Hankin's Personal Site</center>
             </h3> 
-	    Hello!<br><br>
+ 	    <br><br>
+        <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
+	    Hello! Welcome to the personal web page of Alex Hankin.<br><br>
 	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
@@ -31,8 +31,8 @@ layout: default
 	    Currently, I am an intern at Google in Mountain View, California. I am working on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
 	    on the mobile platform.</a><br><br>
 
-	    <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
-	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
+	    <center><a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
+	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
                   <br><br><br><br><br><br><br>
      </div>
 
