--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
 	    <h3>
-      	    <center>Alex Hankin's Personal Site</center>
+      	    Alex Hankin's Personal Site
             </h3> 
  	    <br>
         <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
