--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3><br>
-        <p><center><b>2019</b><br><br>
+        <p><center><b>2019</b><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
