--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3><br>
-        <p><center><b>2019</b><br>
+        <p><center><b>2019</b>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
@@ -61,7 +61,7 @@ layout: default
        
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
-             <p>Here are some pictures from a recent (June-July 2018) backpacking trip in Asia. From
+             <p>Pictures from my travels. From
              left to right:<br> Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
               <center> <div class="row">
        		<div class="column">
