--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-     	<h3>Archival Publications</h3><br>
-        <p><center><b>2019</b>
+     	<h3>Archival Publications</h3>
+        <p><center><b>2019</b><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
@@ -62,7 +62,7 @@ layout: default
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
              <p>Pictures from my travels. From
-             left to right:<br> Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
+             left to right: Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
