--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ layout: default
 
       <!-- "Art Work" tab -->
        <div id="Art Work" class="tabcontent">
-         <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br> 
-         Contact me for more information. <br></p><br>
+         <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br>Contact me for more information. <br></p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/megan_bird.jpg" height="190" width="250"></td></tr>
