--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ layout: default
 
        </div>
 
-      <!-- "Art Work" tab -->
-       <div id="Art Work" class="tabcontent">
+      <!-- "Extra" tab -->
+       <div id="Extra" class="tabcontent">
          <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br>Contact me for more information. <br></p><br>
               <center> <div class="row">
        		<div class="column">
