--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
     <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
       <button class="tablinks" onclick="openTab(event, 'Travel')">Travel</button>
-      <button class="tablinks" onclick="openTab(event, 'Art Work')">Art Work</button>
+      <button class="tablinks" onclick="openTab(event, 'Extra')">Extra</button>
       </div>
 
       
