--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
      	<h3>Archival Publications</h3>
-        <p><center><b>2019</b><br>
+        <p><center>2019<br><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Emerging<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NVMs in LLC Given Workload
+        <i>Evaluation of Non-Volatile<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory-based Last Level Cache given Modern Use Case Behavior 
         Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</center></p>	
      </div>
 
