--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ layout: default
         <p><center>2019<br><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Non-Volatile<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last Level Cache given Modern Use Case Behavior 
-        Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</center></p>	
+        <i>Evaluation of Non-Volatile<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last Level Cache given Modern Use Case Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</center></p>	
      </div>
 
 
