move title and change conference name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
 	    <center><h3>
-      	    Alex Hankin's Personal Site
+      	    &nbsp;&nbsp;Alex Hankin's Personal Site
             </h3></center> 
  	    
         <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
@@ -42,7 +42,7 @@ layout: default
         <p><center>2019<br><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Non-Volatile<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last Level Cache given Modern Use Case Behavior</i>. ISPASS 2019.&nbsp;&nbsp;(pending publication)</center></p>	
+        <i>Evaluation of Non-Volatile<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last Level Cache given Modern Use Case Behavior</i>. IISWC 2019.&nbsp;&nbsp;(pending publication)</center></p>	
      </div>
 
 
