--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
 	    <center><h3>
-      	    &nbsp;&nbsp;Alex Hankin's Personal Site
+      	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alex Hankin's Personal Site
             </h3></center> 
  	    
         <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
