--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@ layout: default
       
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
-	    <center><h3>
-      	    Alex Hankin's Personal Site
-            </h3></center> 
+	    <h3>Alex Hankin's Personal Site</h3> 
  	    
         <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
 	    Hello! Welcome to the personal web page of Alex Hankin.<br><br>
