changes main picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
       <br>
-        <img class="ex2" src="images/just_me_cambodia.png" width='220' height='226' align="left">
+        <img class="ex2" src="images/IMAGE_0962.JPG" width='220' height='226' align="left">
 	    Hello! Welcome to the personal web page of Alex Hankin.<br><br>
 	    I am a 2nd-year PhD student in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
