--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ layout: default
 
       <!-- "Extra" tab -->
        <div id="Extra" class="tabcontent">
-         <p>All art work by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br>Contact me for more information. <br></p><br>
+         <p> Some of my drawings can be found <a
+         href="https://www.instagram.com/facial_impressions">here</a>. <br><br>
+         <p>All photos by <a href="https://www.instagram.com/_dhibe/">Megan Kudzma</a>.<br>Contact me for more information. <br></p><br>
               <center> <div class="row">
        		<div class="column">
        		<img src="images/megan_bird.jpg" height="190" width="250"></td></tr>
