--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
         <p><center>2019<br><br>
-        (Accepted) <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
+        <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Non-Volatile<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last
