--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ layout: default
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i>Evaluation of Non-Volatile<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last
-        Level Cache given Modern Use Case Behavior</i>. IEEE International Symposium on Workload
-        Characterization, 2019.&nbsp;&nbsp;</center></p>	
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Memory based Last
+        Level Cache given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
+        Characterization (IISWC). 12 pages. November 3-5, 2019.&nbsp;&nbsp;</center></p>	
      </div>
 
 
