fixes formatting issue

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ layout: default
         <p><center>2019<br><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i>Evaluation of Non-Volatile<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Memory based Last
+        <i><b>Evaluation of Non-Volatile<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last
         Level Cache given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
         Characterization (IISWC). 12 pages. November 3-5, 2019. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a>&nbsp;&nbsp;</center></p>	
