--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ layout: default
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i><b>Evaluation of Non-Volatile<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory based Last
-        Level Cache given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory Based Last
+        Level Cache Given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
         Characterization (IISWC). 12 pages. November 3-5, 2019. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a>&nbsp;&nbsp;</center></p>	
      </div>
