--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
         worked on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
 	    on the mobile platform.</a><br><br>
 
-	    <center>Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">Lab Profile</a> | 
+	    <center>Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a></center><br><br><br>
                   <br><br><br><br><br><br><br>
      </div>
@@ -82,7 +82,7 @@ layout: default
 
       <!-- "Extra" tab -->
        <div id="Extra" class="tabcontent">
-         <p> Some of my drawings can be found <a
+         <p> When I'm not doing research, I enjoy making art. Some of my drawings can be found <a
          href="https://www.instagram.com/facial_impressions">here</a>. <br><br>
 
        </div>
