--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-        <p><center>2019<br><br>
+        <p><center>2019<br><br></center>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
         <i><b>Evaluation of Non-Volatile<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memory Based Last
         Level Cache Given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
         Characterization (IISWC). 12 pages. November 3-5, 2019. <a
-        href="docs/iiswc2019-final49.pdf">[PDF]</a>&nbsp;&nbsp;</center></p>	
+        href="docs/iiswc2019-final49.pdf">[PDF]</a>&nbsp;&nbsp;</p>	
      </div>
 
 
