--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 	    In the Winter and Spring of 2019, I was an intern at Google in Mountain View, California. I
         worked on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a><br><br>
+	    on the mobile platform.</a><br><br><br>
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
