add link to google scholar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ layout: default
 	    on the mobile platform.</a><br><br><br>
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | 
-	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a><br><br><br>
+	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a
+                href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google
+                Scholar</a><br><br><br>
                   <br><br><br><br><br><br><br>
      </div>
 
