--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ layout: default
             Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
             research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
             Lab</a> (or TCAL, for short). My research interests span a range of topics
-            including Non-Volatile Memory, 
-            Image Signal Processing Accelerators, and Power/Thermal-Aware Architecture. My
-            dissertation research is centered around
+            including emerging embedded Non-Volatile Memories (eNVM), Power/Thermal-Aware Architecture, and Image Signal Processing Accelerators. My
+            dissertation is centered around
             designing and developing an architecture-based Hotspot mitigation technique for modern
             chips. <br><br>
 
 	    In the Winter and Spring of 2019, I was an intern at Google in Mountain View, California. I
         worked on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a><br><br><br>
+	    on the mobile platform.</a><br><br><br> This summer I will be an intern at Intel in
+        Hillsboro, Oregon working on thermal-aware architecture research.
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | 
 	            <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a
@@ -84,7 +84,7 @@ layout: default
 
       <!-- "Extra" tab -->
        <div id="Extra" class="tabcontent">
-         <p> When I'm not doing research, I enjoy making art and playing guitar. Some of my drawings can be found <a
+         <p> When I'm not doing research, I enjoy drawing and playing guitar. Some of my drawings can be found <a
          href="https://www.instagram.com/facial_impressions">here</a>. <br><br>
 
        </div>
