--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 
       <!-- "Extra" tab -->
        <div id="Extra" class="tabcontent">
-         <p> When I'm not doing research, I enjoy drawing and playing guitar. Some of my drawings can be found <a
+         <p> When I'm not doing research, I enjoy drawing and playing guitar. <br><br>Some of my drawings can be found <a
          href="https://www.instagram.com/facial_impressions">here</a>. <br><br>
 
        </div>
