--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: default
        
       <!-- "Travel" tab -->
        <div id="Travel" class="tabcontent">
-             <p>Pictures from my travels. From
+             <p>Some pictures from my travels. From
              left to right: Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
               <center> <div class="row">
        		<div class="column">
