--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-        <p align="justify">center>2019<br><br>
+        <p align="justify"><center>2019<br><br>
         <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
         M. Hempstead. 
-        <i><b>Evaluation of Non-Volatile Memory Based Last <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Level Cache Given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
-        Characterization (IISWC). 12 pages. November 3-5, 2019. <a
+        <i><b>Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
+        Characterization (IISWC). 12 pages (143-154). November 4, 2019. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a><a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
      </div>
 
