--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ layout: default
       <!-- "Extra" tab -->
        <div id="Extra" class="tabcontent">
          <p> When I'm not doing research, I enjoy drawing and playing guitar. 
-         <br><br>Some of my drawings can be found <a
+         <!--<br><br>Some of my drawings can be found <a
          href="https://www.instagram.com/facial_impressions">here</a>. 
          <br><br>Some of my music can be found <a
          href="https://soundcloud.com/user-373746472">here</a>. <br><br>
-
+        -->
        </div>
 </div>
 
