--- a/index.html
+++ b/index.html
@@ -17,21 +17,14 @@ layout: default
       <div id="About" class="tabcontent">
       <br>
         <img class="ex2" src="images/Alex_edit_crop_scaled.png" width='254' height='226' align="left">
-	    Hello! Welcome to the personal web page of Alex Hankin.<br><br>
-	    I am a 3rd-year PhD candidate and research assistant in the <a
+	    I am a PhD candidate in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
             Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
             research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab</a> (or TCAL, for short). My research interests span a range of topics
-            including emerging embedded Non-Volatile Memories (eNVM), Power/Thermal-Aware Architecture, and Image Signal Processing Accelerators. My
-            dissertation is centered around
-            designing and developing an architecture-based Hotspot mitigation technique for modern
-            chips. <br><br>
+            Lab</a> (TCAL). 
+	    <br><br>
+	    My research interests are modeling and simulation with a primary focus on next-generation memory systems which include emerging nonvolatile memories (NVMs). I have also worked on building modeling and simulation tools to study thermal hotspots. <br><br>
 
-	    In the Winter and Spring of 2019, I was an intern at Google in Mountain View, California. I
-        worked on a <a href="https://www.blog.google/products/pixel/pixel-visual-core-image-processing-and-machine-learning-pixel-2/">domain-specific architecture for machine learning and image processing
-	    on the mobile platform.</a><br><br><br> This summer I will be an intern at Intel in
-        Hillsboro, Oregon working on thermal-aware architecture research. <br><br>
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> |<a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/ah7149407">GitHub</a><br><br><br>
                   <br><br><br><br><br><br><br>
