--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@ layout: default
       <div id="About" class="tabcontent">
       <br>
         <img class="ex2" src="images/Alex_edit_crop_scaled.png" width='254' height='226' align="left">
-	    I am a PhD candidate in the <a
+	    I am a PhD candidate at <a
+            href="https://www.tufts.edu">Tufts University</a> in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
-            Department</a> at Tufts University in Medford, Massachusetts. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
+            Department</a>. My advisor is <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>, and I do
             research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
             Lab</a> (TCAL). 
 	    <br><br>
