--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ layout: default
             research as part of the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
             Lab</a> (TCAL). 
 	    <br><br>
-	    My research interests are modeling and simulation with a primary focus on next-generation memory systems which include emerging nonvolatile memories (NVMs). I have also worked on building modeling and simulation tools to study thermal hotspots. <br><br>
+	    My research interests are centered around building modeling and simulation tools to advance the field of computer architecture. I primarily 
+	      focus on next-generation memory systems--those that include emerging nonvolatile memories (NVMs). I have also worked on building tools to study thermal hotspots. <br><br>
 
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> |<a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/ah7149407">GitHub</a><br><br><br>
