--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <!-- "About" tab -->
       <div id="About" class="tabcontent">
       <br>
-        <img class="ex2" src="images/Alex_edit_crop_scaled.png" width='254' height='226' align="left">
+        <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
 	    I am a PhD candidate at <a
             href="https://www.tufts.edu">Tufts University</a> in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
