--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ layout: default
 	    I am a PhD candidate at <a
             href="https://www.tufts.edu">Tufts University</a> in the <a
             href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
-            Department</a>. I work in <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab</a> (TCAL) under the advisement of <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>. 
+            Department</a>. I work in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
+            Lab (TCAL)</a> under the advisement of <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>. 
 	    <br><br>
 	    My research interests are centered around building modeling and simulation tools to advance the field of computer architecture. I primarily 
 	      focus on next-generation memory systems--those that include emerging nonvolatile memories (NVMs). I have also worked on building tools to study thermal hotspots. <br><br>
